--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,15 @@
 /* Add CSS Styling */
+.one,
+.two {
+    font-size: 28px;
+    font-family: Helvetica, "Times New Roman", sans-serif;
+}
+
+.one {
+    color:rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+}
+
+.two {
+    background-color: rgb(255, 255, 0);
+}
