--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,37 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  border: 1px solid red;
 }
 
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 5px;
+  border: 1px solid red;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 5px;
+  border: 1px solid red;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 5px;
+  border: 1px solid red;
 }
 
 .button-container {
   background: #e3f4ff;
+  border: 1px solid red;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  border: 1px solid red;
 }
