--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -16,21 +16,27 @@ body {
   background: #e3f4ff;
   font-size: 16px;
   padding: 5px;
+  margin-bottom: 5px;
   border: 1px solid red;
 }
 
 .content {
   background: #e3f4ff;
-  padding: 5px;
+  padding: 10px 5px;
+  margin-bottom: 5px;
   border: 1px solid red;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 5px auto;
+  text-align: center;
   border: 1px solid red;
 }
 
 button {
+  display: block;
+  margin: 0 auto;
   background: white;
   border: 1px solid #eee;
   border: 1px solid red;
