--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,43 +1,41 @@
 body {
   background: #eee;
   font-family: sans-serif;
-  border: 1px solid red;
 }
 
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
-  padding: 5px;
-  border: 1px solid red;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
   font-size: 16px;
   padding: 5px;
-  margin-bottom: 5px;
-  border: 1px solid red;
+  margin-bottom: 8px;
 }
 
 .content {
   background: #e3f4ff;
-  padding: 10px 5px;
-  margin-bottom: 5px;
-  border: 1px solid red;
+  padding: 10px 6px;
+  margin-bottom: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
   padding: 5px auto;
+  padding-bottom: 5px;
+  padding-top: 5px;
   text-align: center;
-  border: 1px solid red;
 }
 
 button {
   display: block;
-  margin: 0 auto;
+  margin: auto;
+  margin-bottom: 0px;
+  padding: 5px 15px;
   background: white;
   border: 1px solid #eee;
-  border: 1px solid red;
 }
