--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,25 +1,30 @@
 .header  {
-  font-family: monospace;
+  font-family: 'Times New Roman', Times, serif;
   background: papayawhip;
+  display: flex;
 }
 
 .logo {
-  font-size: 48px;
+  font-size: 24px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: auto;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: left;
 }
 
 a {
   font-size: 22px;
   background: white;
-  padding: 8px;
+  padding: 4px;
+  margin: 5px;
   /* this removes the line under the links */
   text-decoration: none;
 }
