--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,30 +1,33 @@
 .header  {
   font-family: 'Times New Roman', Times, serif;
   background: papayawhip;
+  padding: 8px;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
-  font-size: 24px;
+  font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
-  margin: auto;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
-  justify-content: left;
+  padding: 0;
+  margin: 0;
+  gap: 8px;
 }
 
 a {
   font-size: 22px;
   background: white;
-  padding: 4px;
-  margin: 5px;
+  padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
 }
