--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -2,14 +2,6 @@
 you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
-.header,
-.profile-image,
-.logo,
-a,
-ul {
-  border: 2px solid red;
-}
-
 body {
   margin: 0;
   background: #eee;
@@ -20,6 +12,20 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+}
+
+.left {
+  display: flex;
+  align-items: center;
+  margin: 8px;
+}
+
+.right {
+  display: flex;
+  align-items: center;
+  margin: 8px;
 }
 
 .profile-image {
@@ -43,14 +49,20 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin: 0px 16px;
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  margin: 0px 16px;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  margin: 16px;
+  padding: 2px;
 }
