--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -14,18 +14,7 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
   justify-content: space-between;
-}
-
-.left {
-  display: flex;
-  align-items: center;
-  margin: 8px;
-}
-
-.right {
-  display: flex;
-  align-items: center;
-  margin: 8px;
+  padding: 8px;
 }
 
 .profile-image {
@@ -49,20 +38,24 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
-  margin: 0px 16px;
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
-  margin: 0px 16px;
 }
 
 ul {
   list-style-type: none;
   display: flex;
-  justify-content: space-between;
-  margin: 16px;
-  padding: 2px;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
+
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
