--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,29 @@
+.title,
+.container,
+.container div,
+img {
+  border: 0px solid red;
+}
+
+.container {
+  display: flex;
+  gap: 32px;
+}
+
+.first, 
+.second, 
+.third, 
+.fourth {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 img {
@@ -10,6 +34,10 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.text {
+  text-align: center;
 }
 
 /* do not edit this footer */
