--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,13 +1,14 @@
-.title,
-.container,
-.container div,
-img {
-  border: 0px solid red;
+body {
+  font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
 }
 
 .container {
   display: flex;
-  gap: 32px;
+  gap: 52px;
 }
 
 .first, 
@@ -17,13 +18,7 @@ img {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-}
-
-body {
-  font-family: 'Courier New', Courier, monospace;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  width: 200px;
 }
 
 img {
