--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,24 +1,16 @@
 body {
   font-family: 'Courier New', Courier, monospace;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 32px;
+  text-align: center;
 }
 
 .container {
   display: flex;
+  justify-content: center;
   gap: 52px;
 }
 
-.first, 
-.second, 
-.third, 
-.fourth {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 200px;
+.info {
+  max-width: 200px;
 }
 
 img {
@@ -29,10 +21,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-}
-
-.text {
-  text-align: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
