--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+* {
+  border: 0px solid red;
+}
+
 html, body {
   height: 100%;
 }
 
 body {
   font-family: Roboto, sans-serif;
+  font-size: 16px;
   margin: 0;
   background: #aaa;
   color: #333;
@@ -20,6 +25,24 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 16px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+}
+
+.header-row {
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+}
+
+.header {
+  font-weight: 900;
 }
 
 .icon {
@@ -33,6 +56,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+  margin-right: 16px;
 }
 
 .close-button {
