--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -33,6 +33,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: left;
+  gap: 8px;
 }
 
 .header-row {
@@ -79,6 +80,10 @@ button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+}
+
+.next {
+  margin-top: 8px;
 }
 
 button.continue {
