--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -1,20 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-* {
-  border: 0px solid red;
-}
-
 html, body {
   height: 100%;
 }
 
 body {
   font-family: Roboto, sans-serif;
-  font-size: 16px;
   margin: 0;
   background: #aaa;
   color: #333;
-  /* I'll give you this one for free lol */
+  /* I'll give you this one for free */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,24 +21,8 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   display: flex;
+  gap: 16px;
   padding: 16px;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  gap: 8px;
-}
-
-.header-row {
-  display: flex;
-  justify-content: space-between;
-  font-size: 18px;
-}
-
-.header {
-  font-weight: 900;
 }
 
 .icon {
@@ -58,7 +37,19 @@ body {
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-  margin-right: 16px;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.text {
+  margin-bottom: 16px;
 }
 
 .close-button {
@@ -80,10 +71,6 @@ button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
-}
-
-.next {
-  margin-top: 8px;
 }
 
 button.continue {
