Complete final draft of flex exercise 07: layout 2

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,5 +1,5 @@
 * {
-  border: 2px solid red;
+  border: 0px solid red;
   box-sizing: border-box;
 }
 
@@ -20,12 +20,16 @@ body {
   align-items: center;
   font-weight: 900;
   font-size: 32px;
+  padding: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .content {
@@ -39,12 +43,32 @@ body {
   box-sizing: border-box;
 }
 
+ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding-left: 0;
+  gap: 16px;
+  margin: 16px;
+}
+
+.sidebar a {
+  font-size: 24px;
+  color: white;
+  text-decoration: none;
+}
+
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
+  width: 350px;
 }
 
 .card-deck {
   display: flex;
+  flex-wrap: wrap;
+  margin: 48px;
+  gap: 32px;
 }
